package recommendation

import (
    "context"
    "log"
    "time"
    
    "google.golang.org/grpc"
    "google.golang.org/grpc/credentials/insecure"
    recommendationpb "guru-game/gRPC"
)

type GRPCRecommendationClient struct {
    conn   *grpc.ClientConn
    client recommendationpb.RecommendationServiceClient
}

// ‡∏™‡∏£‡πâ‡∏≤‡∏á gRPC client connection
func NewGRPCRecommendationClient(address string) (*GRPCRecommendationClient, error) {
    log.Printf("üîå [gRPC Client] Connecting to %s...", address)
    
    // ‡∏™‡∏£‡πâ‡∏≤‡∏á connection ‡πÇ‡∏î‡∏¢‡πÑ‡∏°‡πà‡πÉ‡∏ä‡πâ TLS (insecure)
    conn, err := grpc.Dial(address, grpc.WithTransportCredentials(insecure.NewCredentials()))
    if err != nil {
        log.Printf("‚ùå [gRPC Client] Failed to connect: %v", err)
        return nil, err
    }
    
    // ‡∏™‡∏£‡πâ‡∏≤‡∏á client ‡∏à‡∏≤‡∏Å connection
    client := recommendationpb.NewRecommendationServiceClient(conn)
    
    log.Printf("‚úÖ [gRPC Client] Connected to %s successfully", address)
    
    return &GRPCRecommendationClient{
        conn:   conn,
        client: client,
    }, nil
}

// ‡∏™‡πà‡∏á‡∏Ç‡πâ‡∏≠‡∏°‡∏π‡∏• boardgames ‡∏ó‡∏±‡πâ‡∏á‡∏´‡∏°‡∏î‡πÑ‡∏õ‡∏¢‡∏±‡∏á Python server
func (c *GRPCRecommendationClient) SendAllBoardgames(boardgames []*recommendationpb.Boardgame) error {
    log.Printf("üì§ [gRPC Client] Sending %d boardgames to Python server...", len(boardgames))
    
    // ‡∏™‡∏£‡πâ‡∏≤‡∏á context ‡∏Å‡∏±‡∏ö timeout
    ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
    defer cancel()
    
    // ‡∏™‡∏£‡πâ‡∏≤‡∏á request
    req := &recommendationpb.BoardgamesRequest{
        Boardgames: boardgames,
    }
    
    // ‡πÄ‡∏£‡∏µ‡∏¢‡∏Å gRPC method
    resp, err := c.client.SendAllBoardgames(ctx, req)
    if err != nil {
        log.Printf("‚ùå [gRPC Client] Failed to send boardgames: %v", err)
        return err
    }
    
    log.Printf("‚úÖ [gRPC Client] Response from Python server:")
    log.Printf("   - Success: %t", resp.Success)
    log.Printf("   - Message: %s", resp.Message)
    
    return nil
}

// ‡∏Ç‡∏≠ recommendations ‡∏à‡∏≤‡∏Å Python server
func (c *GRPCRecommendationClient) GetRecommendations(userID string, limit int32) ([]*recommendationpb.Boardgame, error) {
    log.Printf("üì§ [gRPC Client] Requesting recommendations for user %s (limit: %d)...", userID, limit)
    
    // ‡∏™‡∏£‡πâ‡∏≤‡∏á context ‡∏Å‡∏±‡∏ö timeout
    ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
    defer cancel()
    
    // ‡∏™‡∏£‡πâ‡∏≤‡∏á request
    req := &recommendationpb.RecommendationRequest{
        UserId: userID,
        Limit:  limit,
    }
    
    // ‡πÄ‡∏£‡∏µ‡∏¢‡∏Å gRPC method
    resp, err := c.client.GetRecommendations(ctx, req)
    if err != nil {
        log.Printf("‚ùå [gRPC Client] Failed to get recommendations: %v", err)
        return nil, err
    }
    
    log.Printf("‚úÖ [gRPC Client] Received %d recommendations from Python server", len(resp.Boardgames))
    
    return resp.Boardgames, nil
}

// ‡∏õ‡∏¥‡∏î connection
func (c *GRPCRecommendationClient) Close() error {
    log.Printf("üîå [gRPC Client] Closing connection...")
    return c.conn.Close()
}